[package]
name = "btt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btt"
path = "src/main.rs"

[lib]
name = "btt"
path = "src/lib.rs"

[dependencies]
heapless = "0.8"
rand = "0.8"

[dependencies.coca]
# this commit represents the unreleased 0.3.1 version of coca
# update once https://github.com/teryror/coca/issues/7 is closed
git = "https://github.com/teryror/coca"
rev = "cdb343abc5f63c87b78edb1441b0a4c41dc25ef4"
features = ["alloc"]
